--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                                         <div class="container">
                                             <table class="table table-responsive ms-4">
                                                 <tr>
-                                                    <td class="text-muted">Age</td>
+                                                    <td class="text-muted">Qualification</td>
                                                     <td>:</td>
-                                                    <td>24</td>
+                                                    <td>B.E</td>
                                                 </tr>
                                                 <tr>
                                                     <td class="text-muted">Email</td>
